@@ -8,7 +8,7 @@
     <value key="title" i18n:translate="chiusura_procedimento_bando">Chiusura procedimento bando</value>
     <value key="description">Deadline to participate in the announcement</value>
     <value key="enabled">True</value>
-    <value key="sortable">False</value>
+    <value key="sortable">True</value>
     <value key="operations">
         <element>plone.app.querystring.operation.date.lessThan</element>
         <element>plone.app.querystring.operation.date.largerThan</element>
@@ -56,10 +56,10 @@
 
    <records interface="plone.app.querystring.interfaces.IQueryField"
            prefix="plone.app.querystring.field.getScadenza_bando">
-    <value key="title" i18n:translate="scadenza_bando_label">Expiration date and time</value>
+    <value key="title" i18n:translate="bando_scadenza_partecipazione">Deadline participation terms</value>
     <value key="description">Closing date of the announcements</value>
     <value key="enabled">True</value>
-    <value key="sortable">False</value>
+    <value key="sortable">True</value>
     <value key="operations">
         <element>plone.app.querystring.operation.date.lessThan</element>
         <element>plone.app.querystring.operation.date.largerThan</element>
