@@ -2,7 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:gs="http://namespaces.zope.org/genericsetup"
     i18n_domain="rer.bandi">
-       
+
   <!-- Upgrade steps -->
   <gs:upgradeStep
         title="Upgrade rer.bandi 2.1.0"
@@ -11,12 +11,19 @@
         destination="2"
         handler=".upgrades.to_2"
         profile="rer.bandi:default" />
-  
+
   <gs:upgradeStep
         title="Upgrade rer.bandi 2.2.0"
         description="rer.bandi upgrade step"
         source="2"
         destination="2200"
         handler=".upgrades.migrate_to_2200"
+        profile="rer.bandi:default" />
+  <gs:upgradeStep
+        title="Upgrade rer.bandi 2300"
+        description="rer.bandi upgrade step"
+        source="2200"
+        destination="2300"
+        handler=".upgrades.migrate_to_2300"
         profile="rer.bandi:default" />
 </configure>
